# hyperlane-monorepo

./: .dockerignore  .eslintignore  .eslintrc  .gitattributes  .gitconfig  .gitignore  .gitleaks.toml  .gitmodules  .lintstagedrc  .madison.env  .mcp.json  .npmrc  .oxfmtrc.json  .prettierignore  .prettierrc  .registryrc  .syncpackrc  .yarnrc.yml  AGENTS.md  BUILD_AND_TEST_STATUS.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  CURRENT_STATUS.md  DISCLAIMER.md  Dockerfile  FINAL_BUILD_REPORT.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY_FINAL.md  INTEGRATION_EXAMPLE.md  LICENSE-BUSL-1.1  LICENSE.md  MIGRATION_NEXT_STEPS.md  MISSION_ACCOMPLISHED.md  OFT_IMPLEMENTATION_SUMMARY.md  OFT_IMPLEMENTATION_TEST_REPORT.md  OFT_REBALANCER.md  (+86 more)
dymension/libs/kaspa/: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
rust/: .dockerignore  .env.omni  .gitignore  Cargo.toml  Dockerfile  Dockerfile-e2e  README.md  anvil_state  build  build.sh  check_merkle_db_integrity.sh  docker-bake.hcl  docker-compose.yaml  ethereum_key.txt  fast-relay-phase2-notes.md  fast-relay.md  i.py  neutron_relayer_config.json  neutron_validator_config.json  package.json  patch.rs  provision_kms_keys.py  release.sh  run-locally.sh  running-locally.md  rustfmt.toml  start.sh  vendor.rs
rust/abacus-base/: Cargo.toml
rust/abacus-base/src/: agent.rs  contract_sync.rs  home.rs  inbox.rs  indexer.rs  interchain_gas.rs  lib.rs  macros.rs  mailbox.rs  metrics.rs  multisig_ism.rs  multisig_module.rs  oneline_eyre.rs  outbox.rs  replica.rs  validator_manager.rs  xapp.rs
rust/abacus-cli/: Cargo.toml
rust/abacus-core/: Cargo.toml
rust/abacus-core/src/: chain.rs  lib.rs  test_output.rs  utils.rs
rust/abacus-test/: Cargo.toml
rust/abacus-test/src/: lib.rs  test_utils.rs
rust/agents/checkpointer/: Cargo.toml
rust/agents/kathy/: Cargo.toml
rust/agents/processor/: Cargo.toml
rust/agents/relayer/: Cargo.toml
rust/agents/scraper/: Cargo.toml  README.md
rust/agents/updater/: Cargo.toml
rust/agents/validator/: Cargo.toml
rust/agents/watcher/: Cargo.toml
rust/chains/: README.md
rust/chains/abacus-ethereum/: Cargo.toml  build.rs
rust/chains/hyperlane-aptos/: Cargo.toml
rust/chains/hyperlane-cosmos/: Cargo.toml  build.rs
rust/chains/hyperlane-ethereum/: Cargo.toml
rust/chains/hyperlane-fuel/: Cargo.toml
rust/chains/hyperlane-sealevel/: Cargo.toml
rust/chains/hyperlane-starknet/: .gitignore  Cargo.toml  build.rs
rust/chains/hyperlane-sui/: Cargo.toml
rust/chains/hyperlane-swisstronik/: Cargo.toml  build.rs
rust/chains/optics-ethereum/: Cargo.toml
rust/cli/: Cargo.toml  Mailbox.json  README.md  build.rs
rust/cli/src/: args.rs  convert.rs  core.rs  domains.rs  key.rs  lib.rs  main.rs  send.rs
rust/cli/tests/: convert_to_h256.rs  dispatch.rs  filter.rs  query.rs
rust/config/: cosmos_config.json  mainnet2_config.json  mainnet3_config.json  mainnet_config.json  pragma_config.json  test_config.json  test_sealevel_config.json  testnet3_config.json  testnet4_config.json  testnet_config.json  testnet_neutron_config.json
rust/config/1622504632050-alfajores-goerli/: alfajores_config.json  alfajores_contracts.json  goerli_config.json
rust/config/1622591031448-alfajores-goerli/: alfajores_config.json  (+4 more)
rust/db_path/: 000009.sst  IDENTITY  LOG  LOG.old.1631307913739106  MANIFEST-000010  OPTIONS-000013
rust/ethers-caching/: Cargo.toml
rust/ethers-fallback/: Cargo.toml
rust/ethers-prometheus/: Cargo.toml  build.rs
rust/gelato/: Cargo.toml
rust/hyperlane-base/: Cargo.toml  build.rs
rust/hyperlane-cli/: Cargo.toml  README.md  matching-list-sample-address.json  matching-list-sample-mumbai.json
rust/hyperlane-core/: Cargo.toml
rust/hyperlane-db/: Cargo.toml
rust/hyperlane-rust-challenge/: .gitignore  Cargo.toml  README.md
rust/hyperlane-test/: Cargo.toml
rust/hyperlane_db/: 000190.sst  CURRENT  IDENTITY  LOG  LOG.old.1692109095866656  LOG.old.1692109129283399  LOG.old.1692109142543801  LOG.old.1692109595356629  LOG.old.1692110322000479  LOG.old.1692110678116635  LOG.old.1692159212672457  LOG.old.1692159337379204  LOG.old.1692159630683428  LOG.old.1692160697660985  LOG.old.1692160774841732  LOG.old.1692167576188502  LOG.old.1692167598179047  LOG.old.1692168714159548  LOG.old.1692175657441236  LOG.old.1692176419380884  LOG.old.1692189150768832  LOG.old.1692189358189015  LOG.old.1692192433499495  LOG.old.1692193518543053  LOG.old.1692194047418516  LOG.old.1692194265436485  LOG.old.1692194380428441  LOG.old.1692198883938429  LOG.old.1692199165312346  LOG.old.1692200969793725  LOG.old.1692201117982925  LOG.old.1692201158741632  LOG.old.1692201400366330  LOG.old.1692201634076738  LOG.old.1692252384108942  LOG.old.1692253121310466  LOG.old.1692253194212630  LOG.old.1692253295513730  MANIFEST-000187
rust/kathy/: Cargo.toml
rust/kms-cli/: Cargo.toml
rust/main/: .gitignore  CHANGELOG.md  Cargo.toml  cliff.toml  clippy.toml  constants.toml  release-plz.toml
rust/optics-base/: Cargo.toml  update_abis.sh
rust/optics-core/: Cargo.toml
rust/optics-ethereum/: Cargo.toml
rust/optics-test/: Cargo.toml
rust/patches/: .gitignore
rust/processor/: Cargo.toml
rust/relayer/: Cargo.toml
rust/rust-challenge/: Cargo.toml  README.md
rust/scripts/: README.md  check_merkle_db_integrity_relayer_onchain.sh  check_merkle_db_integrity_relayer_validator.sh  check_merkle_db_integrity_validator_onchain.sh  check_message_db_integrity_relayer_onchain.sh  check_message_db_integrity_relayer_validator.sh  check_message_db_integrity_validator_onchain.sh  determine-next-version.sh  generate-workspace-changelog.sh  get-workspace-version.sh  update-workspace-version.sh
rust/sealevel/: .gitignore  CLAUDE.md  Cargo.toml  README.md  generate-idls.sh  rust-toolchain  solana_program_test_debugging_checklist.md
rust/terraform/: .gitignore  generate-outputs.py  main.tf  outputs.tf
rust/updater/: Cargo.toml
rust/utils/: sealevel-test.bash
rust/validator_db_osmosistestnet/: IDENTITY  LOG
rust/watcher/: Cargo.toml
(+16742 files in other folders)
