cargo-features = ["edition2021"]

[workspace]

members = [
    "agents/*",
    "chains/*",
    "ethers-prometheus",
    "hyperlane-base",
    "hyperlane-core",
    "hyperlane-test",
    "utils/*",
    "sealevel/client",
]
# # FIXME dependency conflicts between solana and hyperlane
# exclude = [ "sealevel" ]
# exclude = [ "sealevel/hyperlane-core" ]

[workspace.package]
documentation = "https://docs.hyperlane.xyz"
edition = "2021"
homepage = "https://hyperlane.xyz"
license-file = "../LICENSE.md"
publish = false
version = "0.1.0"

[workspace.dependencies]
Inflector = "0.11"
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.13"
bincode = "1.3"
blake3 = "1.3"
borsh = "0.9"
bs58 = "=0.4.0"
clap = "4"
color-eyre = "0.6"
config = "~0.13.3"
curve25519-dalek = { version = "3.2.1", features = ["serde"], git = "https://github.com/Eclipse-Laboratories-Inc/curve25519-dalek", branch = "steven/fix-deps" }
derive-new = "0.5"
derive_more = "0.99"
ed25519-dalek = { version = "=1.0.1", git = "https://github.com/Eclipse-Laboratories-Inc/ed25519-dalek", branch = "steven/fix-deps" }
enum_dispatch = "0.3"
ethers = { git = "https://github.com/hyperlane-xyz/ethers-rs", tag = "2023-06-01" }
ethers-contract = { git = "https://github.com/hyperlane-xyz/ethers-rs", tag = "2023-06-01", features = ["legacy"] }
ethers-core = { git = "https://github.com/hyperlane-xyz/ethers-rs", tag = "2023-06-01" }
ethers-providers = { git = "https://github.com/hyperlane-xyz/ethers-rs", tag = "2023-06-01" }
ethers-signers = { git = "https://github.com/hyperlane-xyz/ethers-rs", tag = "2023-06-01", features = ["aws"] }
eyre = "0.6"
fuels = "0.38"
fuels-code-gen = "0.38"
futures = "0.3"
futures-util = "0.3"
generic-array = { version = "0.14", default-features = false, features = ["serde", "more_lengths"] }
hex = "0.4"
itertools = "0.10"
jsonrpc-core = "18.0"
lazy_static = "1.4"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
paste = "1.0"
pretty_env_logger = "0.4"
prometheus = "0.13"
reqwest = "0.11"
rocksdb = "0.20"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
solana-clap-utils = "=1.14.13"
solana-cli-config = "=1.14.13"
solana-client = "=1.14.13"
solana-program = "=1.14.13"
solana-program-test = "=1.14.13"
solana-sdk = "=1.14.13"
spl-associated-token-account = { version = "=1.1.2", features = ["no-entrypoint"], git = "https://github.com/tkporter/eclipse-program-library", rev = "2f7e864" }
spl-noop = { version = "=0.1.3", features = ["no-entrypoint"], git = "https://github.com/tkporter/eclipse-program-library", rev = "2f7e864" }
spl-token = { version = "=3.5.0", features = ["no-entrypoint"], git = "https://github.com/tkporter/eclipse-program-library", rev = "2f7e864" }
spl-token-2022 = { version = "=0.5.0", features = ["no-entrypoint"], git = "https://github.com/tkporter/eclipse-program-library", rev = "2f7e864" }
spl-type-length-value = { version = "0.1.0", git = "https://github.com/tkporter/eclipse-program-library", rev = "2f7e864", features = ["borsh"] }
static_assertions = "1.1"
strum = "0.24"
strum_macros = "0.24"
thiserror = "1.0"
tokio = { version = "1", features = ["parking_lot"] }
tracing = { version = "0.1", features = ["release_max_level_debug"] }
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", default-features = false }
url = "2.3"
log = "0.4"
parking_lot = "0.12"
maplit = "1.0"
derive_builder = "0.12"

# FIXME patch primitive types to pull in borsh support. Unfortunately crates in parity-common refer
#  to one another with local paths so patching one requires patching most of them.
[patch.crates-io.primitive-types]
branch = "steven/primitive-types-impl-borsh-uint-version-fix"
git = "https://github.com/Eclipse-Laboratories-Inc/parity-common"

[patch.crates-io.rlp]
branch = "steven/primitive-types-impl-borsh-uint-version-fix"
git = "https://github.com/Eclipse-Laboratories-Inc/parity-common"
