# This file is updated by `patch.rs`;
# changes will be incorporated but will be reformatted and comments will be lost.

[workspace]
members = [
    "agents/relayer",
    "agents/scraper",
    "agents/validator",
    "chains/hyperlane-ethereum",
    "chains/hyperlane-fuel",
    "chains/hyperlane-sealevel",
    "ethers-prometheus",
    "hyperlane-base",
    "hyperlane-core",
    "hyperlane-test",
    "sealevel/client",
    "sealevel/libraries/access-control",
    "sealevel/libraries/account-utils",
    "sealevel/libraries/ecdsa-signature",
    "sealevel/libraries/hyperlane-sealevel-connection-client",
    "sealevel/libraries/hyperlane-sealevel-token",
    "sealevel/libraries/interchain-security-module-interface",
    "sealevel/libraries/message-recipient-interface",
    "sealevel/libraries/multisig-ism",
    "sealevel/libraries/serializable-account-meta",
    "sealevel/libraries/test-transaction-utils",
    "sealevel/libraries/test-utils",
    "sealevel/programs/hyperlane-sealevel-token",
    "sealevel/programs/hyperlane-sealevel-token-native",
    "sealevel/programs/ism/multisig-ism-message-id",
    "sealevel/programs/ism/test-ism",
    "sealevel/programs/mailbox",
    "sealevel/programs/mailbox-test",
    "sealevel/programs/test-send-receiver",
    "sealevel/programs/validator-announce",
    "utils/abigen",
    "utils/backtrace-oneline",
    "utils/hex",
    "utils/run-locally",
    "utils/patcher",
]

[workspace.package]
documentation = "https://docs.hyperlane.xyz"
edition = "2021"
homepage = "https://hyperlane.xyz"
license-file = "../LICENSE.md"
publish = false
version = "0.1.0"

[workspace.dependencies]
Inflector = "0.11.4"
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.13"
bincode = "1.3"
blake3 = "1.3"
borsh = "0.9"
bs58 = "0.4.0"
clap = "4"
color-eyre = "0.6"
config = "~0.13.3"
derive-new = "0.5"
derive_builder = "0.12"
derive_more = "0.99"
enum_dispatch = "0.3"
eyre = "0.6"
fuels = "0.38"
fuels-code-gen = "0.38"
futures = "0.3"
futures-util = "0.3"
hex = "0.4"
itertools = "0.10"
jsonrpc-core = "18.0"
lazy_static = "1.4"
log = "0.4"
maplit = "1.0"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
parking_lot = "0.12"
paste = "1.0"
pretty_env_logger = "0.4"
primitive-types = "=0.12.1"
prometheus = "0.13"
reqwest = "0.11"
rlp = "=0.5.2"
rocksdb = "0.20"
semver = "1.0"
serde_bytes = "0.11"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.10"
solana-account-decoder = "=1.14.13"
solana-banks-client = "=1.14.13"
solana-banks-interface = "=1.14.13"
solana-banks-server = "=1.14.13"
solana-clap-utils = "=1.14.13"
solana-cli-config = "=1.14.13"
solana-client = "=1.14.13"
solana-program = "=1.14.13"
solana-program-test = "=1.14.13"
solana-sdk = "=1.14.13"
solana-transaction-status = "=1.14.13"
solana-zk-token-sdk = "=1.14.13"
spl-associated-token-account = "=1.1.2"
spl-noop = "=0.1.3"
spl-token = "=3.5.0"
spl-token-2022 = "=0.5.0"
spl-type-length-value = "=0.1.0"
static_assertions = "1.1"
strum = "0.24"
strum_macros = "0.24"
thiserror = "1.0"
tracing-error = "0.2"
tracing-futures = "0.2"
ureq = "2.4"
url = "2.3"
which = "4.3"

[workspace.dependencies.curve25519-dalek]
version = "~3.2"
features = ["serde"]

[workspace.dependencies.ed25519-dalek]
version = "~1.0"
features = []

[workspace.dependencies.ethers]
git = "https://github.com/hyperlane-xyz/ethers-rs"
tag = "2023-06-01"
features = []

[workspace.dependencies.ethers-contract]
git = "https://github.com/hyperlane-xyz/ethers-rs"
tag = "2023-06-01"
features = ["legacy"]

[workspace.dependencies.ethers-core]
git = "https://github.com/hyperlane-xyz/ethers-rs"
tag = "2023-06-01"
features = []

[workspace.dependencies.ethers-providers]
git = "https://github.com/hyperlane-xyz/ethers-rs"
tag = "2023-06-01"
features = []

[workspace.dependencies.ethers-signers]
git = "https://github.com/hyperlane-xyz/ethers-rs"
tag = "2023-06-01"
features = ["aws"]

[workspace.dependencies.generic-array]
version = "0.14"
features = [
    "serde",
    "more_lengths",
]
default-features = false

[workspace.dependencies.serde]
version = "1.0"
features = ["derive"]

[workspace.dependencies.solana]
path = "patches/solana-1.14.13"
features = []

[workspace.dependencies.tokio]
version = "1"
features = ["parking_lot"]

[workspace.dependencies.tracing]
version = "0.1"
features = ["release_max_level_debug"]

[workspace.dependencies.tracing-subscriber]
version = "0.3"
features = []
default-features = false

[patch.crates-io.curve25519-dalek]
version = "3.2.2"
git = "https://github.com/Eclipse-Laboratories-Inc/curve25519-dalek"
branch = "v3.2.2-relax-zeroize"
features = []

[patch.crates-io.ed25519-dalek]
version = "1.0.1"
git = "https://github.com/Eclipse-Laboratories-Inc/ed25519-dalek"
branch = "main"
features = []

[patch.crates-io.primitive-types]
version = "=0.12.1"
path = "patches/parity-common/primitive-types"
features = []
default-features = false

[patch.crates-io.rlp]
version = "=0.5.2"
path = "patches/parity-common/rlp"
features = []
default-features = false

[patch.crates-io.solana-account-decoder]
version = "=1.14.13"
path = "patches/solana/account-decoder"
features = []
default-features = false

[patch.crates-io.solana-banks-client]
version = "=1.14.13"
path = "patches/solana/banks-client"
features = []
default-features = false

[patch.crates-io.solana-banks-interface]
version = "=1.14.13"
path = "patches/solana/banks-interface"
features = []
default-features = false

[patch.crates-io.solana-banks-server]
version = "=1.14.13"
path = "patches/solana/banks-server"
features = []
default-features = false

[patch.crates-io.solana-clap-utils]
version = "=1.14.13"
path = "patches/solana/clap-utils"
features = []
default-features = false

[patch.crates-io.solana-cli-config]
version = "=1.14.13"
path = "patches/solana/cli-config"
features = []
default-features = false

[patch.crates-io.solana-client]
version = "=1.14.13"
path = "patches/solana/client"
features = []
default-features = false

[patch.crates-io.solana-program]
version = "=1.14.13"
path = "patches/solana/sdk/program"
features = []
default-features = false

[patch.crates-io.solana-program-test]
version = "=1.14.13"
path = "patches/solana/program-test"
features = []
default-features = false

[patch.crates-io.solana-sdk]
version = "=1.14.13"
path = "patches/solana/sdk"
features = []
default-features = false

[patch.crates-io.solana-transaction-status]
version = "=1.14.13"
path = "patches/solana/transaction-status"
features = []
default-features = false

[patch.crates-io.solana-zk-token-sdk]
version = "=1.14.13"
path = "patches/solana/zk-token-sdk"
features = []
default-features = false

[patch.crates-io.spl-associated-token-account]
version = "=1.1.2"
path = "patches/spl/associated-token-account/program"
features = []
default-features = false

[patch.crates-io.spl-noop]
version = "=0.1.3"
path = "patches/spl/account-compression/programs/noop"
features = []
default-features = false

[patch.crates-io.spl-token]
version = "=3.5.0"
path = "patches/spl/token/program"
features = []
default-features = false

[patch.crates-io.spl-token-2022]
version = "=0.5.0"
path = "patches/spl/token/program-2022"
features = []
default-features = false

[patch.crates-io.spl-type-length-value]
version = "=0.1.0"
path = "patches/spl/libraries/type-length-value"
features = []
default-features = false
