[workspace]
members = [
    "agents/relayer",
    "agents/scraper",
    "agents/validator",
    "chains/hyperlane-ethereum",
    "chains/hyperlane-fuel",
    "chains/hyperlane-sealevel",
    "ethers-prometheus",
    "hyperlane-base",
    "hyperlane-core",
    "hyperlane-test",
    "sealevel/client",
    "sealevel/libraries/access-control",
    "sealevel/libraries/account-utils",
    "sealevel/libraries/ecdsa-signature",
    "sealevel/libraries/hyperlane-sealevel-connection-client",
    "sealevel/libraries/hyperlane-sealevel-token",
    "sealevel/libraries/interchain-security-module-interface",
    "sealevel/libraries/message-recipient-interface",
    "sealevel/libraries/multisig-ism",
    "sealevel/libraries/serializable-account-meta",
    "sealevel/libraries/test-transaction-utils",
    "sealevel/libraries/test-utils",
    "sealevel/programs/helloworld",
    "sealevel/programs/hyperlane-sealevel-token",
    "sealevel/programs/hyperlane-sealevel-token-collateral",
    "sealevel/programs/hyperlane-sealevel-token-native",
    "sealevel/programs/hyperlane-sealevel-igp",
    "sealevel/programs/hyperlane-sealevel-igp-test",
    "sealevel/programs/ism/multisig-ism-message-id",
    "sealevel/programs/ism/test-ism",
    "sealevel/programs/mailbox",
    "sealevel/programs/mailbox-test",
    "sealevel/programs/test-send-receiver",
    "sealevel/programs/validator-announce",
    "utils/abigen",
    "utils/backtrace-oneline",
    "utils/hex",
    "utils/run-locally",
]

[workspace.package]
documentation = "https://docs.hyperlane.xyz"
edition = "2021"
homepage = "https://hyperlane.xyz"
license-file = "../LICENSE.md"
publish = false
version = "0.1.0"

[workspace.dependencies]
Inflector = "0.11.4"
anyhow = "1.0"
async-trait = "0.1"
auto_impl = "1.0"
backtrace = "0.3"
base64 = "0.21.2"
bincode = "1.3"
borsh = "0.9" # 0.9 is needed for solana 1.14
bs58 = "0.5.0"
bytes = "1"
clap = "4"
color-eyre = "0.6"
config = "0.13.3"
convert_case = "0.6"
crunchy = "0.2"
ctrlc = "3.2"
curve25519-dalek = { version = "~3.2", features = ["serde"] }
derive-new = "0.5"
derive_builder = "0.12"
derive_more = "0.99"
ed25519-dalek = "~1.0"
enum_dispatch = "0.3"
eyre = "0.6"
fixed-hash = "0.8.0"
fuels = "0.38"
fuels-code-gen = "0.38"
futures = "0.3"
futures-util = "0.3"
generic-array = { version = "1.0", features = ["serde", "more_lengths"] }
getrandom = { version = "0.2", features = ["js"] } # Required for WASM support https://docs.rs/getrandom/latest/getrandom/#webassembly-support
hex = "0.4"
itertools = "0.11.0"
jsonrpc-core = "18.0"
log = "0.4"
macro_rules_attribute = "0.2"
maplit = "1.0"
mockall = "0.11"
nix = { version = "0.27", default-features = false }
num = "0.4"
num-bigint = "0.4"
num-derive = "0.4.0"
num-traits = "0.2"
parking_lot = "0.12"
paste = "1.0"
pretty_env_logger = "0.5.0"
primitive-types = "=0.12.1"
prometheus = "0.13"
regex = "1.5"
reqwest = "0.11"
rlp = "=0.5.2"
rocksdb = "0.21.0"
sea-orm = { version = "0.12.3", features = ["sqlx-postgres", "runtime-tokio-native-tls", "with-bigdecimal", "with-time", "macros"] }
sea-orm-migration = { version = "0.12.3", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.10"
sha3 = "0.10"
solana-account-decoder = "=1.14.13"
solana-banks-client = "=1.14.13"
solana-banks-interface = "=1.14.13"
solana-banks-server = "=1.14.13"
solana-clap-utils = "=1.14.13"
solana-cli-config = "=1.14.13"
solana-client = "=1.14.13"
solana-program = "=1.14.13"
solana-program-test = "=1.14.13"
solana-sdk = "=1.14.13"
solana-transaction-status = "=1.14.13"
solana-zk-token-sdk = "=1.14.13"
spl-associated-token-account = { version = "=1.1.2", features = ["no-entrypoint"] }
spl-noop = { version = "=0.1.3", features = ["no-entrypoint"] }
spl-token = { version = "=3.5.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "=0.5.0", features = ["no-entrypoint"] }
spl-type-length-value = "=0.1.0"
static_assertions = "1.1"
strum = "0.25.0"
strum_macros = "0.25.2"
tempfile = "3.3"
thiserror = "1.0"
time = "0.3"
tiny-keccak = "2.0.2"
tokio = { version = "1", features = ["parking_lot"] }
tokio-test = "0.4"
tracing = { version = "0.1", features = ["release_max_level_debug"] }
tracing-error = "0.2"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", default-features = false }
uint = "0.9.5"
ureq = { version = "2.4", default-features = false }
url = "2.3"
walkdir = "2"
warp = "0.3"
which = "4.3"

[workspace.dependencies.ethers]
git = "https://github.com/hyperlane-xyz/ethers-rs"
tag = "2023-06-01"
features = []

[workspace.dependencies.ethers-contract]
git = "https://github.com/hyperlane-xyz/ethers-rs"
tag = "2023-06-01"
features = ["legacy"]

[workspace.dependencies.ethers-core]
git = "https://github.com/hyperlane-xyz/ethers-rs"
tag = "2023-06-01"
features = []

[workspace.dependencies.ethers-providers]
git = "https://github.com/hyperlane-xyz/ethers-rs"
tag = "2023-06-01"
features = []

[workspace.dependencies.ethers-signers]
git = "https://github.com/hyperlane-xyz/ethers-rs"
tag = "2023-06-01"
features = ["aws"]

[patch.crates-io.curve25519-dalek]
version = "3.2.2"
git = "https://github.com/Eclipse-Laboratories-Inc/curve25519-dalek"
branch = "v3.2.2-relax-zeroize"

[patch.crates-io.ed25519-dalek]
version = "1.0.1"
git = "https://github.com/Eclipse-Laboratories-Inc/ed25519-dalek"
branch = "main"

[patch.crates-io.primitive-types]
version = "=0.12.1"
git = "https://github.com/hyperlane-xyz/parity-common.git"
branch = "hyperlane"

[patch.crates-io.rlp]
version = "=0.5.2"
git = "https://github.com/hyperlane-xyz/parity-common.git"
branch = "hyperlane"

[patch.crates-io.solana-account-decoder]
version = "=1.14.13"
git = "https://github.com/hyperlane-xyz/solana.git"
tag = "hyperlane-1.14.13-2023-07-04"

[patch.crates-io.solana-banks-client]
version = "=1.14.13"
git = "https://github.com/hyperlane-xyz/solana.git"
tag = "hyperlane-1.14.13-2023-07-04"

[patch.crates-io.solana-banks-interface]
version = "=1.14.13"
git = "https://github.com/hyperlane-xyz/solana.git"
tag = "hyperlane-1.14.13-2023-07-04"

[patch.crates-io.solana-banks-server]
version = "=1.14.13"
git = "https://github.com/hyperlane-xyz/solana.git"
tag = "hyperlane-1.14.13-2023-07-04"

[patch.crates-io.solana-clap-utils]
version = "=1.14.13"
git = "https://github.com/hyperlane-xyz/solana.git"
tag = "hyperlane-1.14.13-2023-07-04"

[patch.crates-io.solana-cli-config]
version = "=1.14.13"
git = "https://github.com/hyperlane-xyz/solana.git"
tag = "hyperlane-1.14.13-2023-07-04"

[patch.crates-io.solana-client]
version = "=1.14.13"
git = "https://github.com/hyperlane-xyz/solana.git"
tag = "hyperlane-1.14.13-2023-07-04"

[patch.crates-io.solana-program]
version = "=1.14.13"
git = "https://github.com/hyperlane-xyz/solana.git"
tag = "hyperlane-1.14.13-2023-07-04"

[patch.crates-io.solana-program-test]
version = "=1.14.13"
git = "https://github.com/hyperlane-xyz/solana.git"
tag = "hyperlane-1.14.13-2023-07-04"

[patch.crates-io.solana-sdk]
version = "=1.14.13"
git = "https://github.com/hyperlane-xyz/solana.git"
tag = "hyperlane-1.14.13-2023-07-04"

[patch.crates-io.solana-transaction-status]
version = "=1.14.13"
git = "https://github.com/hyperlane-xyz/solana.git"
tag = "hyperlane-1.14.13-2023-07-04"

[patch.crates-io.solana-zk-token-sdk]
version = "=1.14.13"
git = "https://github.com/hyperlane-xyz/solana.git"
tag = "hyperlane-1.14.13-2023-07-04"

[patch.crates-io.spl-associated-token-account]
version = "=1.1.2"
git = "https://github.com/hyperlane-xyz/solana-program-library.git"
branch = "hyperlane"

[patch.crates-io.spl-noop]
version = "=0.1.3"
git = "https://github.com/hyperlane-xyz/solana-program-library.git"
branch = "hyperlane"

[patch.crates-io.spl-token]
version = "=3.5.0"
git = "https://github.com/hyperlane-xyz/solana-program-library.git"
branch = "hyperlane"

[patch.crates-io.spl-token-2022]
version = "=0.5.0"
git = "https://github.com/hyperlane-xyz/solana-program-library.git"
branch = "hyperlane"

[patch.crates-io.spl-type-length-value]
version = "=0.1.0"

git = "https://github.com/hyperlane-xyz/solana-program-library.git"
branch = "hyperlane"
