[package]
name = "abacus-base"
version = "0.1.0"
edition = "2021"


[dependencies]
# Main block
tokio = { version = "1", features = ["rt", "macros"] }
config = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }
thiserror = { version = "1.0.22", default-features = false }
async-trait = { version = "0.1.42", default-features = false }
futures-util = "0.3.12"
eyre = "0.6"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["json"] }
rocksdb = { git = "https://github.com/rust-rocksdb/rust-rocksdb" }
mockall = "0.10.2"
backtrace = "0.3"

ethers-prometheus = { path = "../ethers-prometheus", features = ["serde"] }
abacus-core = { path = "../abacus-core" }
abacus-ethereum = { path = "../chains/abacus-ethereum" }
abacus-test = { path = "../abacus-test" }
paste = "1.0"
tracing-error = "0.2"

prometheus = "0.13"

warp = "0.3"

# these versions are important!
tracing-opentelemetry = "0.17"
opentelemetry = { version = "0.17", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.16", features = [
    "reqwest_collector_client",
    "rt-tokio"
] }
opentelemetry-zipkin = { version = "0.15", default-features = false, features = [
    "reqwest-client",
] }
rusoto_core = "0.47.0"
rusoto_kms = "0.47.0"
rusoto_s3 = "0.47.0"
lazy_static = "1.4.0"
once_cell = "1.8.0"

[dev-dependencies]
color-eyre = "0.6"

[features]
oneline-eyre = []
