[package]
name = "abacus-base"
version = "0.1.0"
edition = "2021"


[dependencies]
# Main block
tokio = { version = "1", features = ["rt", "macros"] }
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
ethers = { git = "https://github.com/abacus-network/ethers-rs", tag = "2022-09-12-01" }
thiserror = { version = "1.0", default-features = false }
async-trait = { version = "0.1", default-features = false }
futures-util = "0.3"
eyre = "0.6"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["json"] }
rocksdb = "0.18"
mockall = "0.10.2"
num-traits = "0.2"
num-derive = "0.3"
strum = "0.24"
strum_macros = "0.24"

backtrace = { version = "0.3", optional = true }
backtrace-oneline = { path = "../utils/backtrace-oneline", optional = true }

ethers-prometheus = { path = "../ethers-prometheus", features = ["serde"] }
abacus-core = { path = "../abacus-core" }
abacus-ethereum = { path = "../chains/abacus-ethereum" }
abacus-test = { path = "../abacus-test" }
paste = "1.0"
tracing-error = "0.2"

prometheus = "0.13"

warp = "0.3"

# these versions are important!
tracing-opentelemetry = "0.17"
opentelemetry = { version = "0.17", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.16", features = [
    "reqwest_collector_client",
    "rt-tokio"
] }
opentelemetry-zipkin = { version = "0.15", default-features = false, features = [
    "reqwest-client",
] }

# dependency version is determined by etheres
rusoto_core = "*"
rusoto_kms = "*"
rusoto_s3 = "*"

lazy_static = "1.4"
once_cell = "1.12"

[dev-dependencies]
color-eyre = "0.6"


[features]
oneline-eyre = ["backtrace-oneline", "backtrace"]
