[package]
name = "abacus-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6"
ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }
ethers-signers = { git = "https://github.com/gakonst/ethers-rs", branch = "master", features = ["aws"] }
hex = "0.4.3"
once_cell = "1.8.0"
rusoto_core = "0.47.0"
rusoto_kms = "0.47.0"
tokio = "1"
serde_json = "1.0"
structopt = "0.3.23"

abacus-ethereum = { path = "../chains/abacus-ethereum" }
abacus-core = { path = "../abacus-core" }
