[package]
name = "abacus-core"
version = "0.1.0"
authors = ["James Prestwich <prestwich@clabs.co>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master", default-features = false, features = ['legacy'] }
ethers-signers = { git = "https://github.com/gakonst/ethers-rs", branch = "master", features=["aws"] }
ethers-providers = { git = "https://github.com/gakonst/ethers-rs", branch = "master", features=["ws", "rustls"] }
hex = "0.4.3"
sha3 = "0.9.1"
lazy_static = "*"
thiserror = "*"
async-trait = { version = "0.1.42", default-features = false }
tokio = { version = "1", features = ["rt", "macros"] }
tracing = "0.1"
tracing-futures = "0.2"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
eyre = "0.6"
rocksdb = { git = "https://github.com/rust-rocksdb/rust-rocksdb" }
bytes = { version = "1", features = ["serde"]}
num = {version="0", features=["serde"]}

[dev-dependencies]
tokio = {version = "1", features = ["rt", "time"]}
color-eyre = "0.6"

[features]
output = []
