[package]
name = "abacus-test"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
ethers = { git = "https://github.com/abacus-network/ethers-rs", tag = "2022-08-30-02" }
thiserror = { version = "1.0", default-features = false }
async-trait = { version = "0.1", default-features = false }
futures-util = "0.3"
eyre = "0.6"
mockall = "0.10.2"
rand = "0.8.3"
rocksdb = "0.18"
tempfile = "3.3"

abacus-core = { path = "../abacus-core" }
tracing = "0.1"
