[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = { version = "4.5.28", features = ["derive"] }
url = "2.5.4"
ethers = "2.0.14"
tokio = { version = "1", features = ["full"] }
