[package]
name = "ethers-caching"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.11"
ethers = { git = "https://github.com/hyperlane-xyz/ethers-rs", tag = "2022-12-05-01" }
async-trait = { version = "0.1", default-features = false }
lazy_static = "1.4"
tokio = { version = "1", features = ["time", "sync"] }
