[package]
name = "ethers-prometheus"
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
prometheus.workspace = true
ethers.workspace = true
derive_builder = "0.12"
derive-new.workspace = true
async-trait.workspace = true
futures.workspace = true
parking_lot = { version = "0.12" }
maplit = "1.0"
log = "0.4"
tokio = { workspace = true, features = ["time", "sync", "parking_lot"] }
static_assertions.workspace = true

serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true }

# enable feature for this crate that is imported by ethers-rs
primitive-types = { version = "*", features = ["fp-conversion"] }

[build-dependencies]
abigen = { path = "../utils/abigen", features = ["ethers"] }

[features]
default = []
serde = ["dep:serde"]
