cargo-features = ["workspace-inheritance"]

[package]
name = "ethers-prometheus"
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
derive-new.workspace = true
derive_builder.workspace = true
ethers = { workspace = true, optional = true }
swisstronik-ethers = {git = "https://github.com/SigmaGmbH/ethers-rs.git", branch = "publish", features = [], optional = true, package = "ethers"}
futures.workspace = true
log.workspace = true
maplit.workspace = true
parking_lot.workspace = true
prometheus.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true }
static_assertions.workspace = true
tokio = { workspace = true, features = ["time", "sync", "parking_lot"] }

# enable feature for this crate that is imported by ethers-rs
primitive-types = { workspace = true, features = ["fp-conversion"] }
hyperlane-core = { path = "../hyperlane-core", features = ["agent", "float"] }

[build-dependencies]
abigen = { path = "../utils/abigen", features = ["ethers"] }

[features]
default = ["ethereum"]
serde = ["dep:serde", "dep:ethers"]
ethereum = ["dep:serde", "dep:ethers"]
swisstronik = ["dep:serde", "dep:swisstronik-ethers"]
