[package]
name = "gelato"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { version = "0.1", default-features = false }
ethers = { git = "https://github.com/abacus-network/ethers-rs", tag = "2022-09-12-01" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
tokio = { version = "1", features = ["macros"] }
reqwest = { version = "0", features = ["json"]}
rustc-hex = { version = "2" }
thiserror = { version = "1.0", default-features = false }
tracing = "0.1"
