[package]
name = "gelato"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { version = "0.1", default-features = false }
ethers = { git = "https://github.com/hyperlane-xyz/ethers-rs", tag = "2022-10-28-01" }
eyre = "0.6"
reqwest = { version = "0", features = ["json"]}
rustc-hex = { version = "2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
serde_repr = "0.1.9"
thiserror = { version = "1.0", default-features = false }
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
