[package]
name = "hyperlane-base"
version = "0.1.0"
edition = "2021"


[dependencies]
# Main block
tokio = { version = "1", features = ["rt", "macros"] }
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
serde_path_to_error = "0.1"
ethers = { git = "https://github.com/hyperlane-xyz/ethers-rs", tag = "2022-12-05-01" }
fuels = "0.33"
thiserror = "1.0"
async-trait = { version = "0.1", default-features = false }
futures-util = "0.3"
eyre = "0.6"
color-eyre = { version = "0.6", optional = true }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["json"] }
rocksdb = "0.18"
mockall = "0.11"

backtrace = { version = "0.3", optional = true }
backtrace-oneline = { path = "../utils/backtrace-oneline", optional = true }

ethers-prometheus = { path = "../ethers-prometheus", features = ["serde"] }
hyperlane-core = { path = "../hyperlane-core" }
hyperlane-ethereum = { path = "../chains/hyperlane-ethereum" }
hyperlane-fuel = { path = "../chains/hyperlane-fuel" }
hyperlane-test = { path = "../hyperlane-test" }
paste = "1.0"
tracing-error = "0.2"

prometheus = "0.13"

warp = "0.3"

# these versions are important!
tracing-opentelemetry = "0.17"
opentelemetry = { version = "0.17", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.16", features = [
    "reqwest_collector_client",
    "rt-tokio"
] }
opentelemetry-zipkin = { version = "0.15", default-features = false, features = [
    "reqwest-client",
] }

# dependency version is determined by etheres
rusoto_core = "*"
rusoto_kms = "*"
rusoto_s3 = "*"

lazy_static = "1.4"
once_cell = "1.16"

[dev-dependencies]
color-eyre = "0.6"


[features]
oneline-eyre = ["backtrace-oneline", "backtrace"]
oneline-errors = ["oneline-eyre"]
