[package]
name = "hyperlane-base"
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
# Main block
async-trait.workspace = true
color-eyre = { workspace = true, optional = true }
config.workspace = true
derive-new.workspace = true
ethers.workspace = true
eyre.workspace = true
fuels.workspace = true
futures-util.workspace = true
itertools.workspace = true
mockall = "0.11"
paste.workspace = true
prometheus.workspace = true
rocksdb.workspace = true
serde.workspace = true
serde_json.workspace = true
static_assertions.workspace = true
tempfile = { version = "3.3", optional = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
tracing-error = "0.2"
tracing-futures.workspace = true
tracing-subscriber = { workspace = true, features = ["json", "ansi"] }
tracing.workspace = true
warp = "0.3"

backtrace = { version = "0.3", optional = true }
backtrace-oneline = { path = "../utils/backtrace-oneline", optional = true }

ethers-prometheus = { path = "../ethers-prometheus", features = ["serde"] }
hyperlane-core = { path = "../hyperlane-core" }
hyperlane-ethereum = { path = "../chains/hyperlane-ethereum" }
hyperlane-fuel = { path = "../chains/hyperlane-fuel" }
hyperlane-sealevel = { path = "../chains/hyperlane-sealevel" }
hyperlane-test = { path = "../hyperlane-test" }

# these versions are important!
tracing-opentelemetry = "0.18"
opentelemetry = { version = "0.18", features = ["rt-tokio", "trace"] }
opentelemetry-jaeger = { version = "0.17", features = [
    "reqwest_collector_client",
    "rt-tokio"
] }
opentelemetry-zipkin = { version = "0.16", default-features = false, features = [
    "reqwest-client",
] }

# dependency version is determined by etheres
rusoto_core = "*"
rusoto_kms = "*"
rusoto_s3 = "*"

lazy_static = "1.4"
once_cell = "1.16"

[dev-dependencies]
color-eyre = "0.6"
tempfile = "3.3"

[features]
default = ["oneline-errors", "color-eyre"]
oneline-eyre = ["backtrace-oneline", "backtrace"]
oneline-errors = ["oneline-eyre"]
test-utils = ["dep:tempfile"]
